--- a/static/styles/screen.css
+++ b/static/styles/screen.css
@@ -1572,7 +1572,7 @@ articles-list styles
 
 .articles-list > summary h2 {
 	display: inline-block;
-	margin-bottom: var(--gutter-height);
+	margin-bottom: var(--line-height);
 
 	cursor: pointer;
 }
