--- a/static/styles/screen.css
+++ b/static/styles/screen.css
@@ -332,7 +332,6 @@ body * {
 	line-height: inherit;
 }
 
-.meta h2,
 body > header h1 {
 	font-size: 1em;
 }
@@ -360,7 +359,7 @@ code, kbd {
 	font-size: 0.92em; /* adjust for x-height */
 }
 
-aside.meta,
+.meta,
 .sidenote, .entry-content aside,
 .footnotes,
 abbr:before, abbr:after, a[title*=' ']:before, span[title*=' ']:before {
@@ -1104,6 +1103,8 @@ social sharing menu
 .sharing {
 	/*margin-top: var(--gutter-width);*/
 	margin-bottom: var(--gutter-width);
+
+	user-select: none;
 }
 
 .sharing summary {
@@ -1150,6 +1151,10 @@ a:not([href^="http"]), a:visited:not([href^="http"]) {
 
 a[href^="mailto"] {
 	text-decoration-style: solid;
+}
+
+a:not([href]) {
+	text-decoration-style: dashed;
 }
 
 a:active {
@@ -2026,28 +2031,38 @@ single article meta styles
 }
 
 
-.meta {
-	display: flex;
-	flex-wrap: wrap;
-
-	border: 1.5px dashed;
+.meta + * {
+	margin-top: calc(var(--gutter-width)/2);
+	outline: 1px dashed red;
 }
 
-.meta > * {
-	flex-basis: calc((100% - 2*var(--gutter-width))/2);
-	flex-grow: 1;
-	margin: calc(var(--gutter-width)/2);
+.meta details {
+	padding: calc(var(--gutter-width)/4) calc(var(--gutter-width)/2);
+	border-top: 0.5px dashed;
 	/*outline: 1px dashed red;*/
 }
+	.meta details:last-child {
+		border-bottom: 0.5px dashed;
+	}
 
-.meta h2 {
+.meta summary {
+	margin-left: calc(-1*var(--gutter-width)/2); /* adjust for the detail handle */
+	cursor: pointer;
 	font-variant: small-caps;
 	text-transform: uppercase;
 }
-.meta dl {
-	display: grid;
-	/*grid-gap: var(--gutter-width);*/
-	grid-template-columns: minmax(34%, max-content) 1fr;
+
+.meta summary ~ * {
+	/*outline: 1px solid red;*/
+	margin-left: 0.2rem;  /* adjust for the detail handle */
+}
+
+@media only screen and ( max-width: 1200px ) {
+	.meta dl {
+		display: grid;
+		/*grid-gap: var(--gutter-width);*/
+		grid-template-columns: minmax(34%, max-content) 1fr;
+	}
 }
 
 .meta dt {
@@ -2071,6 +2086,7 @@ single article meta styles
 
 #TableOfContents ul {
 	padding: 0;
+	margin: 0;
 	/*counter-reset: item;*/
 }
 
@@ -2078,36 +2094,36 @@ single article meta styles
 	background: red;
 }
 
-#TableOfContents ul ul {
-	counter-reset: item;
-}
-
 #TableOfContents li:before {
 	position: relative;
 	margin: 0;
 }
 
-#TableOfContents ul ul:not(:first-child) {
-	/*counter-reset: item;*/
-	padding-top: 0.4rem;
+#TableOfContents ul > li {
+	counter-increment: item;
 }
 
 #TableOfContents ul > li:before {
-	/*margin-left: -0.7rem;*/
 	padding-right: 0.1rem;
 	content: counters(item, '.') '. ';
-	counter-increment: item;
+}
+
+/*#TableOfContents > ul > li:first-child + li {
+	counter-reset: item;
 }
 
 #TableOfContents > ul > li:first-child:before {
 	content: '';
 	margin: 0;
 	padding: 0;
+}*/
+
+#TableOfContents ul ul {
+	counter-reset: item;
 }
 
-
 /*--------------------------------------------------------------
-sidenote styles
+sidenote & marginalia styles
 --------------------------------------------------------------*/
 
 .sidenote:before,
@@ -2167,6 +2183,7 @@ sidenote styles
 
 
 @media only screen and ( min-width: 1200px ) {
+	.meta,
 	.sidenote,
 	.entry-content aside {
 		position: absolute;
