--- a/layouts/shortcodes/articles-list.html
+++ b/layouts/shortcodes/articles-list.html
@@ -5,17 +5,18 @@
 {{- $class := (.Get "class") -}}
 {{- $title := (.Get "title") -}}
 {{- $closed := (.Get "closed") -}}
-{{- $lang := .Site.Language.Lang -}}
+{{- $articles := where (where .Site.AllPages ".IsPage" true) ".Lang" "eq" .Site.Language.Lang -}}
+{{- $articles := $articles | union (where .Site.AllPages ".Params.crosspost" true) -}}
+{{- $articles := union (where $articles ".Type" "in" $types) (where $articles ".Params.tags" "intersect" (slice $tag)) -}}
+{{- $articles := $articles | symdiff (where $articles ".Params.tags" "intersect" (slice $filter)) -}}
+{{- $articles_count := len $articles -}}
+{{- if gt $articles_count 0 -}}
 <details id="{{ with $id }}{{ . }}{{ end }}" class="articles-list {{ with $class }}{{ . }}{{ end }}" {{ if ne $closed "true" }}open{{ end }}>
-<summary><h2>{{ $title }}</h2></summary>
+<summary><h2>{{ $title }} ({{ $articles_count }})</h2></summary>
 <div class="wrapper">
-{{- range .Site.AllPages -}}
-	{{- if and (and (or (in $types .Type) (in .Params.tags $tag)) (eq .IsPage true)) (not (in .Params.tags $filter)) -}}
-		{{/* display articles from other languages */}}
-		{{- if (or (eq .Lang $lang) .Params.Crosspost) -}}
+{{- range $articles.ByDate.Reverse -}}
 			{{ partial "article.html" . }}
-		{{- end -}}
-	{{- end -}}
 {{- end -}}
 </div>
 </details>
+{{- end -}}
