article listing update

--- a/layouts/shortcodes/articles-list.html
+++ b/layouts/shortcodes/articles-list.html
@@ -1,6 +1,7 @@
 {{- $types := (.Get "types") -}}
 {{- $tag := (.Get "tag") -}}
-{{- $filter := (.Get "filter") -}}
+{{- $tagfilter := (.Get "tagfilter") -}}
+{{- $items := or (.Get "items") 12 -}}
 {{- $id := (.Get "id") -}}
 {{- $class := (.Get "class") -}}
 {{- $title := (.Get "title") -}}
@@ -8,13 +9,13 @@
 {{- $articles := where (where .Site.AllPages ".IsPage" true) ".Lang" "eq" .Site.Language.Lang -}}
 {{- $articles := $articles | union (where .Site.AllPages ".Params.crosspost" true) -}}
 {{- $articles := union (where $articles ".Type" "in" $types) (where $articles ".Params.tags" "intersect" (slice $tag)) -}}
-{{- $articles := $articles | symdiff (where $articles ".Params.tags" "intersect" (slice $filter)) -}}
+{{- $articles := $articles | symdiff (where $articles ".Params.tags" "intersect" (slice $tagfilter)) -}}
 {{- $articles_count := len $articles -}}
 {{- if gt $articles_count 0 -}}
-<details id="{{ with $id }}{{ . }}{{ end }}" class="articles-list {{ with $class }}{{ . }}{{ end }}" {{ if ne $closed "true" }}open{{ end }}>
-<summary><h2>{{ $title }} ({{ $articles_count }})</h2></summary>
+<details id="{{ with $id }}{{ . }}{{ end }}" class="articles-list {{ with $class }}{{ . }}{{ end }}" data-articles-count="{{ $articles_count }}" {{ if ne $closed "true" }}open{{ end }}>
+<summary><h2>{{ $title }}</h2></summary>
 <div class="wrapper">
-{{- range $articles.ByDate.Reverse -}}
+{{- range first $items $articles.ByDate.Reverse -}}
 			{{ partial "article.html" . }}
 {{- end -}}
 </div>
