--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -16,9 +16,9 @@
 		<h1 class="title"><a href="#">{{ with .Title }}{{ . }}{{ end }}</a></h1>
 		<header>
 			<div class="details">
-				{{ if .Params.description }}
+				{{ if .Params.Summary }}
 					<div class="summary">
-						{{ .Params.description | markdownify }}
+						{{ .Params.Summary | plainify | markdownify }}
 					</div>
 				{{ end }}
 				{{ if and (ne .Site.Params.show_share false) (ne .Params.show_share false) }}
