--- a/layouts/404.html
+++ b/layouts/404.html
@@ -8,48 +8,12 @@
 			margin: 4em;
 			background: #ccc;
 		}
-		a {
-			border-bottom: 1px solid #ccc;
-			border-color: rgba(0,0,0,0.2);
-			color: #333;
-			text-decoration: none;
-
-			-webkit-transition  : border .3s;
-			-moz-transition     : border .3s;
-			transition          : border .3s;
-		}
-		a:hover {
-			border-bottom: 4px solid #000
-		}
+		a { color: #333; }
 	</style>
 </head>
-<body onload="init()">
+<body>
 	<h1><a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a></h1>
-	<p id="output">404</p>
-	<script type="text/javascript">
-		var count = 1, output = document.getElementById('output');
-
-		setTimeout(function(){
-					output.innerHTML += ' = ';
-				}, 20);
-
-		function write() {
-			if (count < 404) {
-				output.innerHTML += '1';
-				setTimeout(function(){
-					output.innerHTML += ' + ';
-				}, 2);
-				count++;
-			}
-			else {
-				output.innerHTML += '1 <a onclick="history.go(-1);">Page Not Found.</a>';
-				window.clearInterval(timer);
-			}
-		}
-
-		function init() {
-			timer = setInterval(write, 10);
-		}
-	</script>
+	<h2>Error 404: Page Not Found</h2>
+	<p><a href="{{ .Site.BaseURL }}">« Return to the homepage</a></p>
 </body>
 </html>
