--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -12,8 +12,8 @@
 			{{ $customcss.Content | safeCSS }}
 		</style>
 	{{ end -}}
-	{{ if ne .Site.Params.show_languages false }}{{ partial "languages" . }}{{ end }}
-	{{ if ne .Site.Params.show_ui false }}{{ partial "ui" . }}{{ end }}
+	<!-- {{ if ne .Site.Params.show_languages false }}{{ partial "languages" . }}{{ end }} -->
+	{{ if ne .Site.Params.show_ui false }}{{ partialCached "ui" . }}{{ end }}
 	<header class="cluster">
 		{{ block "header" . }}{{ partial "header/inner" . }}{{end}}
 	</header>
