--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -1,5 +1,5 @@
 <script src="{{ "/scripts/jquery.min.js" | relURL }}" data-no-instant></script>
 <script src="{{ "/scripts/fancybox/jquery.fancybox.min.js" | relURL }}" async></script>
-<script src="{{ "/scripts/jquery.onionskin.js" | relURL }}" async></script>
+<script src="{{ "/scripts/jquery.xerographic.js" | relURL }}" async></script>
 <script src="{{ "/scripts/instantpage.js" | relURL }}" type="module" defer></script>
 {{ template "_internal/google_analytics_async.html" . }}
