--- a/static/styles/screen.css
+++ b/static/styles/screen.css
@@ -1,8 +1,8 @@
 @charset "utf-8";
 /*--------------------------------------------------------------
-onionskin theme
-made by: Heacles Papatheodorou
-url: https://heracl.es/onionskin
+xerographic theme
+made by: Heracles Papatheodorou
+url: https://github.com/Arty2/xerographic
 --------------------------------------------------------------*/
 
 /*--------------------------------------------------------------
